<resources>
    <string name="app_name">sistemaCentroCultural</string>
    <string name="guardar">Guardar</string>
    <string name="actualizar">Actualizar</string>
    <string name="listar">Listar</string>
    <string name="borrar">Borrar</string>
    <string name="borro">Borrar / Actualizar</string>
    <string name="ipguardar">IP a guardar</string>
    <string name="mensaje_ip">IP del dispositivo</string>
    <string name="epoca">Epoca</string>
    <string name="genero">Genero</string>
    <string name="instrumento">Instrumento</string>
    <string name="musico">Musico</string>
    <string name="obra">Obra Famosa</string>
    <string name="nombreEpoca">Nombre de la epoca</string>
    <string name="nombreGenero">Nombre del genero</string>
    <string name="nombreInstrumento">Nombre del instrumento</string>
    <string name="nombreMusico">Nombre del musico</string>
    <string name="nombreObra">Nombre de la obra</string>
    <string name="nacioMusico">Fecha de nacimiento</string>
    <string name="murioMusico">Fecha de muerte</string>
    <string name="caracteristica">Caracteristica</string>
    <string name="creador">Creador</string>
    <string name="historia">Historia</string>
    <string name="lugarInstrumento">Lugar de creacion</string>
    <string name="inicioEpoca">Periodo de inicio</string>
    <string name="finEpoca">Periodo de fin</string>
    <string name="origen">Año de origen</string>
    <string name="tipo">Tipo</string>
    <string name="material">Material</string>
    <string name="partitura">Partitura</string>
    <string name="creacionObra">Año de creacion</string>
    <string name="imagen">Direccion de la imagen</string>
    <string name="codigo">Codigo actualizar o borrar</string>
    <string name="Proceso">Resultado del proceso</string>
    <string name="regresar">Regresar</string>
    <string name="Menu">Menú</string>
</resources>